Fix: Updated the app.py with the updated test cases results

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,20 @@ DATABASE_URL=sqlite:///users.db
 # Security settings (generate your own secret key)
 SECRET_KEY=your-secret-key-here
 
+# JWT Configuration
+JWT_SECRET_KEY=your-jwt-secret-key-here
+JWT_EXPIRATION_HOURS=1
+
+# Rate Limiting Configuration
+RATE_LIMIT_STORAGE_URI=memory://
+RATE_LIMIT_GLOBAL=100 per hour
+RATE_LIMIT_LOGIN=5 per minute
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FILE=security.log
+ENABLE_SECURITY_LOGGING=true
+
 # Server configuration
 HOST=localhost
 PORT=5000
