update: updated the list for gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,40 @@ __pycache__/
 venv/
 .vscode/
 .idea/
+
+# Logs
+*.log
+security.log
+app.log
+
+.pytest_cache/
+.coverage
+coverage.xml
+htmlcov/
+.tox/
+.nox/
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+build/
+dist/
+*.egg-info/
+.eggs/
+
+
+
+.env.local
+.env.production
+.env.staging
