fix: fixed the setup script

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -23,3 +23,7 @@ python-dotenv>=0.19.0
 # Additional dependencies for improved architecture
 dataclasses-json>=0.5.7  # For better data serialization
 dependency-injector>=4.41.0  # Professional DI container
+Flask==2.3.2
+Werkzeug==2.3.6
+Flask-Limiter==3.5.0
+PyJWT==2.8.0
